# pss

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
src/: api_data.rs  auth.rs  main.rs  schema.rs  schema.sql  seeds.rs  test_utils.rs  users.rs
src/controller/: auth.rs  categories.rs  mod.rs  utils.rs  words.rs
templates/: layout.hbs  login.hbs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  Categories.svelte  Category.svelte  Word.svelte  Words.svelte  app.css
web/src/lib/: server_api.ts
