[package]
name = "pss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "time", "sqlite", "macros" ], default-features = false }
