[package]
name = "pss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "time", "sqlite", "macros" ], default-features = false }
serde = { version = "1.0.152", features = [ "derive" ] }
futures = "0.3.25"
handlebars = { version = "4.3.6", features = [ "rust-embed" ] }
rust-embed = "6.4.2"
password-hash = { version = "0.4.2", features = ["std"] }
argon2 = "0.4"
rand = { version = "0.8.5", features = ["std"] }
serde_json = "1.0.91"
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive"] }
